deploy/example/ingress.yaml
# [[file:../../README.org::*Ingress Certificate][Ingress Certificate:1]]
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # Reference the Origin CA Issuer.
    # NOTE: set all three annotations
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginClusterIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
  name: example
  namespace: default
spec:
  rules:
    - host: example.com
      http:
        paths:
         - pathType: Prefix
           path: /
           backend:
              service:
                name: examplesvc
                port:
                  number: 80
  tls:
    # specifying a host in the TLS section will tell cert-manager what
    # DNS SANs should be on the created certificate.
    - hosts:
        - example.com
      # cert-manager will create this secret
      secretName: example-tls
# Ingress Certificate:1 ends here
